--- a/reactTest/WebApp/REST/Common/Core/packages.config
+++ b/reactTest/WebApp/REST/Common/Core/packages.config
@@ -1,25 +1,36 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
   <package id="BouncyCastle" version="1.8.1" targetFramework="net461" />
+  <package id="BouncyCastle.Cryptography" version="2.4.0" targetFramework="net461" />
   <package id="DocuSign.eSign.dll" version="3.2.0" targetFramework="net461" />
-  <package id="iTextSharp" version="5.5.12" targetFramework="net461" />
+  <package id="iTextSharp" version="5.5.13.4" targetFramework="net461" />
+  <package id="Microsoft.Bcl.AsyncInterfaces" version="8.0.0" targetFramework="net461" />
   <package id="Microsoft.CSharp" version="4.5.0" targetFramework="net461" />
-  <package id="Microsoft.IdentityModel.JsonWebTokens" version="5.4.0" targetFramework="net461" />
-  <package id="Microsoft.IdentityModel.Logging" version="5.4.0" targetFramework="net461" />
+  <package id="Microsoft.IdentityModel.Abstractions" version="7.5.2" targetFramework="net461" />
+  <package id="Microsoft.IdentityModel.JsonWebTokens" version="7.5.2" targetFramework="net461" />
+  <package id="Microsoft.IdentityModel.Logging" version="7.5.2" targetFramework="net461" />
   <package id="Microsoft.IdentityModel.Protocols" version="5.4.0" targetFramework="net461" />
-  <package id="Microsoft.IdentityModel.Tokens" version="5.4.0" targetFramework="net461" />
+  <package id="Microsoft.IdentityModel.Tokens" version="7.5.2" targetFramework="net461" />
   <package id="MongoDB.Bson" version="2.4.3" targetFramework="net461" />
   <package id="MongoDB.Driver" version="2.4.3" targetFramework="net461" />
   <package id="MongoDB.Driver.Core" version="2.4.3" targetFramework="net461" />
-  <package id="Newtonsoft.Json" version="13.0.1" targetFramework="net461" />
-  <package id="RestSharp" version="106.3.1" targetFramework="net461" />
+  <package id="Newtonsoft.Json" version="13.0.3" targetFramework="net461" />
+  <package id="RestSharp" version="112.0.0" targetFramework="net461" />
   <package id="RestSharpSigned" version="105.2.2" targetFramework="net461" />
   <package id="ServiceStack" version="4.5.4" targetFramework="net461" />
   <package id="ServiceStack.Client" version="4.5.4" targetFramework="net461" />
   <package id="ServiceStack.Common" version="4.5.4" targetFramework="net461" />
   <package id="ServiceStack.Interfaces" version="4.5.4" targetFramework="net461" />
   <package id="ServiceStack.Text" version="4.5.4" targetFramework="net461" />
-  <package id="System.ComponentModel.Annotations" version="4.5.0" targetFramework="net461" />
+  <package id="System.Buffers" version="4.5.1" targetFramework="net461" />
+  <package id="System.ComponentModel.Annotations" version="5.0.0" targetFramework="net461" />
   <package id="System.IdentityModel.Tokens.Jwt" version="5.4.0" targetFramework="net461" />
+  <package id="System.Memory" version="4.5.5" targetFramework="net461" />
+  <package id="System.Numerics.Vectors" version="4.5.0" targetFramework="net461" />
+  <package id="System.Runtime.CompilerServices.Unsafe" version="6.0.0" targetFramework="net461" />
   <package id="System.Runtime.InteropServices.RuntimeInformation" version="4.3.0" targetFramework="net461" />
+  <package id="System.Text.Encodings.Web" version="8.0.0" targetFramework="net461" />
+  <package id="System.Text.Json" version="8.0.4" targetFramework="net461" />
+  <package id="System.Threading.Tasks.Extensions" version="4.5.4" targetFramework="net461" />
+  <package id="System.ValueTuple" version="4.5.0" targetFramework="net461" />
 </packages>
