--- a/reactTest/WebApp/REST/Servers/ServiceStack.SelfHost/packages.config
+++ b/reactTest/WebApp/REST/Servers/ServiceStack.SelfHost/packages.config
@@ -1,9 +1,17 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
+  <package id="BouncyCastle.Cryptography" version="2.3.1" targetFramework="net461" />
+  <package id="DocuSign.eSign.dll" version="7.0.0" targetFramework="net461" />
+  <package id="Microsoft.Bcl.AsyncInterfaces" version="1.1.0" targetFramework="net461" />
+  <package id="Microsoft.IdentityModel.Abstractions" version="7.5.2" targetFramework="net461" />
+  <package id="Microsoft.IdentityModel.JsonWebTokens" version="7.5.2" targetFramework="net461" />
+  <package id="Microsoft.IdentityModel.Logging" version="7.5.2" targetFramework="net461" />
+  <package id="Microsoft.IdentityModel.Tokens" version="7.5.2" targetFramework="net461" />
   <package id="mongocsharpdriver" version="2.3.0" targetFramework="net461" />
   <package id="MongoDB.Bson" version="2.4.3" targetFramework="net461" />
   <package id="MongoDB.Driver" version="2.4.3" targetFramework="net461" />
   <package id="MongoDB.Driver.Core" version="2.4.3" targetFramework="net461" />
+  <package id="Newtonsoft.Json" version="13.0.3" targetFramework="net461" />
   <package id="protobuf-net" version="2.1.0" targetFramework="net461" />
   <package id="ServiceStack" version="4.5.4" targetFramework="net461" />
   <package id="ServiceStack.Authentication.MongoDB" version="4.5.2" targetFramework="net461" />
@@ -11,6 +19,15 @@
   <package id="ServiceStack.Common" version="4.5.4" targetFramework="net461" />
   <package id="ServiceStack.Interfaces" version="4.5.4" targetFramework="net461" />
   <package id="ServiceStack.Text" version="4.5.4" targetFramework="net461" />
+  <package id="System.Buffers" version="4.5.1" targetFramework="net461" />
+  <package id="System.ComponentModel.Annotations" version="5.0.0" targetFramework="net461" />
+  <package id="System.Memory" version="4.5.5" targetFramework="net461" />
+  <package id="System.Numerics.Vectors" version="4.5.0" targetFramework="net461" />
+  <package id="System.Runtime.CompilerServices.Unsafe" version="4.7.1" targetFramework="net461" />
   <package id="System.Runtime.InteropServices.RuntimeInformation" version="4.3.0" targetFramework="net461" />
+  <package id="System.Text.Encodings.Web" version="4.7.2" targetFramework="net461" />
+  <package id="System.Text.Json" version="4.7.2" targetFramework="net461" />
+  <package id="System.Threading.Tasks.Extensions" version="4.5.4" targetFramework="net461" />
+  <package id="System.ValueTuple" version="4.5.0" targetFramework="net461" />
   <package id="Topshelf" version="4.0.3" targetFramework="net461" />
 </packages>
