- Check in recent work - key files for Docusign - Update informational text file - Fix user deletion - Upgrade Docusign - Check in unfinished work on Docusign 6.0 - Fix user creation (was not setting corporate/bank setting correctly) - Fix problem where user was set to super admin instead of admin or user

--- a/reactTest/WebApp/REST/Common/Core/Core.csproj
+++ b/reactTest/WebApp/REST/Common/Core/Core.csproj
@@ -48,11 +48,14 @@
     <Prefer32Bit>false</Prefer32Bit>
   </PropertyGroup>
   <ItemGroup>
+    <Reference Include="BouncyCastle.Crypto, Version=1.8.9.0, Culture=neutral, PublicKeyToken=0e99375e54769942">
+      <HintPath>..\..\..\WebApp.AspNetCore\packages\BouncyCastle.1.8.9\lib\BouncyCastle.Crypto.dll</HintPath>
+    </Reference>
     <Reference Include="BouncyCastle.Cryptography, Version=2.0.0.0, Culture=neutral, PublicKeyToken=072edcf4a5328938, processorArchitecture=MSIL">
       <HintPath>..\..\..\packages\BouncyCastle.Cryptography.2.4.0\lib\net461\BouncyCastle.Cryptography.dll</HintPath>
     </Reference>
-    <Reference Include="DocuSign.eSign, Version=3.2.0.0, Culture=neutral, PublicKeyToken=7fca6fcbbc219ede, processorArchitecture=MSIL">
-      <HintPath>..\..\..\packages\DocuSign.eSign.dll.3.2.0\lib\net452\DocuSign.eSign.dll</HintPath>
+    <Reference Include="DocuSign.eSign, Version=6.0.0.0, Culture=neutral, PublicKeyToken=7fca6fcbbc219ede, processorArchitecture=MSIL">
+      <HintPath>..\..\..\WebApp.AspNetCore\packages\DocuSign.eSign.dll.6.0.0\lib\net452\DocuSign.eSign.dll</HintPath>
     </Reference>
     <Reference Include="itextsharp, Version=5.5.13.4, Culture=neutral, PublicKeyToken=8354ae6d2174ddca, processorArchitecture=MSIL">
       <HintPath>..\..\..\packages\iTextSharp.5.5.13.4\lib\net461\itextsharp.dll</HintPath>
