--- a/reactTest/WebApp/REST/Servers/ServiceStack.SelfHost/packages.config
+++ b/reactTest/WebApp/REST/Servers/ServiceStack.SelfHost/packages.config
@@ -1,11 +1,14 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
+  <package id="BouncyCastle" version="1.8.9" targetFramework="net461" />
   <package id="BouncyCastle.Cryptography" version="2.3.1" targetFramework="net461" />
-  <package id="DocuSign.eSign.dll" version="7.0.0" targetFramework="net461" />
+  <package id="DocuSign.eSign.dll" version="6.0.0" targetFramework="net461" />
   <package id="Microsoft.Bcl.AsyncInterfaces" version="1.1.0" targetFramework="net461" />
+  <package id="Microsoft.CSharp" version="4.5.0" targetFramework="net461" />
   <package id="Microsoft.IdentityModel.Abstractions" version="7.5.2" targetFramework="net461" />
   <package id="Microsoft.IdentityModel.JsonWebTokens" version="7.5.2" targetFramework="net461" />
   <package id="Microsoft.IdentityModel.Logging" version="7.5.2" targetFramework="net461" />
+  <package id="Microsoft.IdentityModel.Protocols" version="5.4.0" targetFramework="net461" />
   <package id="Microsoft.IdentityModel.Tokens" version="7.5.2" targetFramework="net461" />
   <package id="mongocsharpdriver" version="2.3.0" targetFramework="net461" />
   <package id="MongoDB.Bson" version="2.4.3" targetFramework="net461" />
@@ -21,6 +24,7 @@
   <package id="ServiceStack.Text" version="4.5.4" targetFramework="net461" />
   <package id="System.Buffers" version="4.5.1" targetFramework="net461" />
   <package id="System.ComponentModel.Annotations" version="5.0.0" targetFramework="net461" />
+  <package id="System.IdentityModel.Tokens.Jwt" version="5.4.0" targetFramework="net461" />
   <package id="System.Memory" version="4.5.5" targetFramework="net461" />
   <package id="System.Numerics.Vectors" version="4.5.0" targetFramework="net461" />
   <package id="System.Runtime.CompilerServices.Unsafe" version="4.7.1" targetFramework="net461" />
